--- a/preguntas.html
+++ b/preguntas.html
@@ -34,7 +34,7 @@
     </div>
     <!-- Botones -->
     <div class="navbar">
-        <a href="inicio.html">Página principal</a>
+        <a href="index.html">Página principal</a>
         <a href="galeria.html">Trabajos realizados</a>
         <a href="preguntas.html">Preguntas frecuentes</a>
         <a href="contacto.html">Contáctenos</a>
