--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- necesario para el encabezado: -->
     <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <!-- ------------ hasta acá lo del encabezado -->
     <script src="js/nav.js"></script>
 
