--- a/contacto.html
+++ b/contacto.html
@@ -8,11 +8,12 @@
     <!-- necesario para el encabezado: -->
     <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    
     <!-- ------------ hasta acá lo del encabezado -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.2/dist/umd/popper.min.js"
+        <link rel="stylesheet" href="style.css">
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.2/dist/umd/popper.min.js"
         integrity="sha384-q9CRHqZndzlxGLOj+xrdLDJa9ittGte1NksRmgJKeCV9DrM7Kz868XYqsKWPpAmn"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
@@ -24,24 +25,24 @@
 
 <body>
     <div class="header">
-        <div><img src="img/logomiboda.png" width="70" height="70"></div>
+        <div><img src="logomiboda.png" width="70" height="70"></div>
         <div>
             <h1><strong>Mi Boda</strong></h1>
         </div>
         <div>
-            <a href="http://www.instagram.com" target="_blank"><img src="img/iglogo.png" alt="instagram" width="40"
+            <a href="http://www.instagram.com" target="_blank"><img src="iglogo.png" alt="instagram" width="40"
                     height="40"></a>
-            <a href="http://www.twitter.com" target="_blank"><img src="img/twiterlogo.png" alt="twitter" width="40"
+            <a href="http://www.twitter.com" target="_blank"><img src="twiterlogo.png" alt="twitter" width="40"
                     height="40"></a>
-            <a href="http://www.facebook.com" target="_blank"><img src="img/logofacebook.png" alt="facebook" width="40"
+            <a href="http://www.facebook.com" target="_blank"><img src="logofacebook.png" alt="facebook" width="40"
                     height="40"></a>
-            <a href="http://www.whatsapp.com" target="_blank"><img src="img/wsplogo.png" alt="whatsapp" width="40"
+            <a href="http://www.whatsapp.com" target="_blank"><img src="wsplogo.png" alt="whatsapp" width="40"
                     height="40"></a>
         </div>
     </div>
     <!-- Botones -->
     <div class="navbar">
-        <a href="inicio.html">Página principal</a>
+        <a href="index.html">Página principal</a>
         <a href="galeria.html">Trabajos realizados</a>
         <a href="preguntas.html">Preguntas frecuentes</a>
         <a href="contacto.html">Contáctenos</a>
@@ -112,13 +113,13 @@
     <footer class="footer">
         <div>
             <h3>Seguinos en nuestras Redes Sociales</h3>
-            <div><a href="http://www.instagram.com" target="_blank"><img src="img/iglogo.png" alt="instagram" width="50"
+            <div><a href="http://www.instagram.com" target="_blank"><img src="iglogo.png" alt="instagram" width="50"
                         height="50"></a>
-                <a href="http://www.twitter.com" target="_blank"><img src="img/twiterlogo.png" alt="twitter" width="50"
+                <a href="http://www.twitter.com" target="_blank"><img src="twiterlogo.png" alt="twitter" width="50"
                         height="50"></a>
-                <a href="http://www.facebook.com" target="_blank"><img src="img/logofacebook.png" alt="facebook"
+                <a href="http://www.facebook.com" target="_blank"><img src="logofacebook.png" alt="facebook"
                         width="50" height="50"></a>
-                <a href="http://www.whatsapp.com" target="_blank"><img src="img/wsplogo.png" alt="whatsapp" width="50"
+                <a href="http://www.whatsapp.com" target="_blank"><img src="wsplogo.png" alt="whatsapp" width="50"
                         height="50"></a>
             </div>
 
