--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
 
     <!-- Encabezado y logo -->
     <div class="header">
-        <div><img src="img/logomiboda.png" width="70" height="70"></div>
+        <div><img src="logomiboda.png" width="70" height="70"></div>
         <div>
             <h1>MiBoda.com</h1>
         </div>
         <div>
-            <a href="http://www.instagram.com" target="_blank"><img src="img/iglogo.png" alt="instagram" width="40"
+            <a href="http://www.instagram.com" target="_blank"><img src="iglogo.png" alt="instagram" width="40"
                     height="40"></a>
-            <a href="http://www.twitter.com" target="_blank"><img src="img/twiterlogo.png" alt="twitter" width="40"
+            <a href="http://www.twitter.com" target="_blank"><img src="twiterlogo.png" alt="twitter" width="40"
                     height="40"></a>
-            <a href="http://www.facebook.com" target="_blank"><img src="img/logofacebook.png" alt="facebook" width="40"
+            <a href="http://www.facebook.com" target="_blank"><img src="logofacebook.png" alt="facebook" width="40"
                     height="40"></a>
-            <a href="http://www.whatsapp.com" target="_blank"><img src="img/wsplogo.png" alt="whatsapp" width="40"
+            <a href="http://www.whatsapp.com" target="_blank"><img src="wsplogo.png" alt="whatsapp" width="40"
                     height="40"></a>
         </div>
     </div>
     <!-- Botones -->
     <div class="navbar">
-        <a href="inicio.html">Página principal</a>
+        <a href="index.html">Página principal</a>
         <a href="galeria.html">Trabajos realizados</a>
         <a href="preguntas.html">Preguntas frecuentes</a>
         <a href="contacto.html">Contáctenos</a>
@@ -108,13 +108,13 @@
     <footer class="footer">
         <div>
             <h3>Seguinos en nuestras Redes Sociales</h3>
-            <div><a href="http://www.instagram.com" target="_blank"><img src="img/iglogo.png" alt="instagram" width="50"
+            <div><a href="http://www.instagram.com" target="_blank"><img src="iglogo.png" alt="instagram" width="50"
                         height="50"></a>
-                <a href="http://www.twitter.com" target="_blank"><img src="img/twiterlogo.png" alt="twitter" width="50"
+                <a href="http://www.twitter.com" target="_blank"><img src="twiterlogo.png" alt="twitter" width="50"
                         height="50"></a>
-                <a href="http://www.facebook.com" target="_blank"><img src="img/logofacebook.png" alt="facebook"
+                <a href="http://www.facebook.com" target="_blank"><img src="logofacebook.png" alt="facebook"
                         width="50" height="50"></a>
-                <a href="http://www.whatsapp.com" target="_blank"><img src="img/wsplogo.png" alt="whatsapp" width="50"
+                <a href="http://www.whatsapp.com" target="_blank"><img src="wsplogo.png" alt="whatsapp" width="50"
                         height="50"></a>
             </div>
 
