--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 
     <!-- Encabezado y logo -->
     <div class="header">
-        <div><img src="logomiboda.png" width="70" height="70"></div>
+        <div><img src="imagenes/logomiboda.png" width="70" height="70"></div>
         <div>
             <h1>MiBoda.com</h1>
         </div>
         <div>
-            <a href="http://www.instagram.com" target="_blank"><img src="iglogo.png" alt="instagram" width="40"
+            <a href="http://www.instagram.com" target="_blank"><img src="imagenes/iglogo.png" alt="instagram" width="40"
                     height="40"></a>
-            <a href="http://www.twitter.com" target="_blank"><img src="twiterlogo.png" alt="twitter" width="40"
+            <a href="http://www.twitter.com" target="_blank"><img src="imagenes/twiterlogo.png" alt="twitter" width="40"
                     height="40"></a>
-            <a href="http://www.facebook.com" target="_blank"><img src="logofacebook.png" alt="facebook" width="40"
+            <a href="http://www.facebook.com" target="_blank"><img src="imagenes/logofacebook.png" alt="facebook" width="40"
                     height="40"></a>
-            <a href="http://www.whatsapp.com" target="_blank"><img src="wsplogo.png" alt="whatsapp" width="40"
+            <a href="http://www.whatsapp.com" target="_blank"><img src="imagenes/wsplogo.png" alt="whatsapp" width="40"
                     height="40"></a>
         </div>
     </div>
@@ -108,13 +108,13 @@
     <footer class="footer">
         <div>
             <h3>Seguinos en nuestras Redes Sociales</h3>
-            <div><a href="http://www.instagram.com" target="_blank"><img src="iglogo.png" alt="instagram" width="50"
+            <div><a href="http://www.instagram.com" target="_blank"><img src="imagenes/iglogo.png" alt="instagram" width="50"
                         height="50"></a>
-                <a href="http://www.twitter.com" target="_blank"><img src="twiterlogo.png" alt="twitter" width="50"
+                <a href="http://www.twitter.com" target="_blank"><img src="imagenes/twiterlogo.png" alt="twitter" width="50"
                         height="50"></a>
-                <a href="http://www.facebook.com" target="_blank"><img src="logofacebook.png" alt="facebook"
+                <a href="http://www.facebook.com" target="_blank"><img src="imagenes/logofacebook.png" alt="facebook"
                         width="50" height="50"></a>
-                <a href="http://www.whatsapp.com" target="_blank"><img src="wsplogo.png" alt="whatsapp" width="50"
+                <a href="http://www.whatsapp.com" target="_blank"><img src="imagenes/wsplogo.png" alt="whatsapp" width="50"
                         height="50"></a>
             </div>
 
