--- a/preguntas.html
+++ b/preguntas.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <!-- ------------ hasta acá lo del encabezado -->
-    <script src="js/nav.js"></script>
+    <script src="nav.js"></script>
 
 </head>
 
