--- a/contacto.html
+++ b/contacto.html
@@ -8,12 +8,13 @@
     <!-- necesario para el encabezado: -->
     <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    
+
     <!-- ------------ hasta acá lo del encabezado -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.2/dist/umd/popper.min.js"
+    <link rel="stylesheet" href="style.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.2/dist/umd/popper.min.js"
         integrity="sha384-q9CRHqZndzlxGLOj+xrdLDJa9ittGte1NksRmgJKeCV9DrM7Kz868XYqsKWPpAmn"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
@@ -113,14 +114,14 @@
     <footer class="footer">
         <div>
             <h3>Seguinos en nuestras Redes Sociales</h3>
-            <div><a href="http://www.instagram.com" target="_blank"><img src="imagenes/igfooter.jpg" alt="instagram" width="50"
-                        height="50"></a>
-                <a href="http://www.twitter.com" target="_blank"><img src="imagenes/twtrfooter.jpg" alt="twitter" width="50"
-                        height="50"></a>
+            <div><a href="http://www.instagram.com" target="_blank"><img src="imagenes/igfooter.jpg" alt="instagram"
+                        width="50" height="50"></a>
+                <a href="http://www.twitter.com" target="_blank"><img src="imagenes/twtrfooter.jpg" alt="twitter"
+                        width="50" height="50"></a>
                 <a href="http://www.facebook.com" target="_blank"><img src="imagenes/fbfooter.jpg" alt="facebook"
                         width="50" height="50"></a>
-                <a href="http://www.whatsapp.com" target="_blank"><img src="imagenes/wspfooter.jpg" alt="whatsapp" width="50"
-                        height="50"></a>
+                <a href="http://www.whatsapp.com" target="_blank"><img src="imagenes/wspfooter.jpg" alt="whatsapp"
+                        width="50" height="50"></a>
             </div>
 
         </div>
